<resources>
    <string name="app_name">Bos Toolkit</string>
    <string name="app_txt">BOS</string>
    <string name="main_account">账户</string>
    <string name="main_personal">个人</string>
    <string name="err_txt_network">网络错误</string>
    <string name="home_create_account">创建账户</string>
    <string name="personal_txt_bos">BOS Toolkit</string>
    <string name="personal_txt_dapp">更&#160;可&#160;能&#160;的&#160;链&#160;,&#160;&#160;为&#160;D&#160;A&#160;p&#160;p&#160;而&#160;生</string>
    <string name="personal_txt_password">修改密码</string>
    <string name="personal_txt_forget">忘记密码</string>
    <string name="personal_txt_red">创建红包</string>
    <string name="personal_txt_cloud">onedrive云备份</string>
    <string name="personal_txt_lang">语言设置</string>
    <string name="personal_txt_about">关于我们</string>
    <string name="personal_txt_help">使用帮助</string>
    <string name="pwd_update_title">修改密码</string>
    <string name="pwd_update_primary">原密码</string>
    <string name="pwd_update_ipunt_primary">请输入原密码</string>
    <string name="pwd_update_txt_new">新密码</string>
    <string name="pwd_update_ipunt_new">请输入新密码</string>
    <string name="pwd_update_txt_repeat">重复新密码</string>
    <string name="pwd_update_ipunt_repeat">请再次输入新密码</string>
    <string name="pwd_update_txt_hint">密码提示</string>
    <string name="pwd_update_ipunt_hint">选填</string>
    <string name="pwd_update_btn_txt">确认修改</string>
    <string name="pwd_update_err_empty">密保问题不能空</string>
    <string name="pwd_update_err_new">新密码不能为空</string>
    <string name="pwd_update_err_num">密码不得低于8位</string>
    <string name="pwd_update_err_identical">两次输入的密码不相同</string>
    <string name="pwd_txt_length_err">密码长度大于8并且小于16</string>
    <string name="pwd_txt_tips_identical">密码和提示不能相同</string>
    <string name="pwd_update_err_leng">密保问题大于1并且小于16</string>
    <string name="language_title">语言设置</string>
    <string name="language_txt_en">English</string>
    <string name="language_txt_zh">简体中文</string>
    <string name="security_title">设置密保</string>
    <string name="security_hint_answer">请输入答案</string>
    <string name="security_hint_content">密保将用于导出或修改私钥、修改密码，请认真填写！</string>
    <string name="security_hint_found">创建账号</string>
    <string name="found_title">创建密码</string>
    <string name="found_txt_pwd">密码</string>
    <string name="found_hint_tips">请输入8位以上密码</string>
    <string name="found_hint_confirm">确认密码</string>
    <string name="found_check_txt">我已仔细阅读并同意</string>
    <string name="found_check_service">《服务隐私条款》</string>
    <string name="found_btn_next">下一步</string>
    <string name="import_title">导入账号</string>
    <string name="import_tab_key">KeyStore</string>
    <string name="import_tab_private">私钥</string>
    <string name="import_tab_cloud">云端恢复</string>
    <string name="import_edit_key">请输入明文KeyStore</string>
    <string name="import_txt_help">导入帮助</string>
    <string name="import_key_edit_hint">请输入明文私钥</string>
    <string name="manage_title">账户管理</string>
    <string name="manage_txt_norm">限额配置</string>
    <string name="manage_txt_store">导出KeyStore</string>
    <string name="manage_txt_backups">备份至云</string>
    <string name="manage_txt_install">高级设置</string>
    <string name="quote_title">限额配置</string>
    <string name="quote_txt_day">Active Key 日付限额（BOS）</string>
    <string name="quote_txt_single">Active Key 单笔限额（BOS）</string>
    <string name="quote_hint_quota">请输入额度</string>
    <string name="quote_btn_confirm">确定</string>
    <string name="export_key_tite">导出私钥</string>
    <string name="export_simple_key">0x2b5edb8…4398457b99f</string>
    <string name="export_save">请妥善保存好您的私钥，请勿复制粘贴，千万不能丢失，我们不存储密码，也无法帮您找回</string>
    <string name="export_txt_copy">复制</string>
    <string name="senior_title">高级设置</string>
    <string name="senior_txt_authority">权限管理</string>
    <string name="senior_txt_delete">删除账号</string>
    <string name="authority_settin_title">权限设置</string>
    <string name="authority_settin_txt_name">账户名</string>
    <string name="authority_settin_txt_owner">Owner Key</string>
    <string name="authority_settin_txt_update">更改</string>
    <string name="authority_settin_txt_active">Active Key</string>
    <string name="authority_settin_txt_tipes">1、Owner：拥有当前EOS账户的所有权限\n2、Active：默认情况下，可以完成除更改Owner以外的所有交易\n3、为了您的资产安全，建议使用 Active 权限导入钱包日常使用 </string>
    <string name="update_power_txt">更改权限</string>
    <string name="update_power_current">OwnerKey（当前）</string>
    <string name="update_power_perove">私钥（更改）</string>
    <string name="update_power_public_update">公钥（更改）</string>
    <string name="update_power_public">重新生成</string>
    <string name="update_power_tips">如果更换公钥为当前使用的公钥，更换后需重新导入变更后私钥</string>
    <string name="update_power_ensure">确认修改</string>
    <string name="dialog_txt_title">注意</string>
    <string name="dialog_txt_content">当前正在变更账户权限，请确认你已经备份好最新私钥</string>
    <string name="dialog_txt_my_backup">我已备份</string>
    <string name="dialog_txt_my_immediately">立即备份</string>
    <string name="home_import_account">导入账户</string>
    <string name="export_key_txt_conten">导出私钥将存在账户安全风险\n请务必谨慎操作！</string>
    <string name="export_key_txt_export">确认导出</string>
    <string name="input_pwd_title">账户密码验证</string>
    <string name="input_pwd_hint_txt">请输入当前密码</string>
    <string name="external_import_btn_txt">确认导入</string>
    <string name="dialog_pwd_txt_forget">忘记密码</string>
    <string name="pop_man_red">红包中心</string>
    <string name="new_red_txt_have">已有账户</string>
    <string name="new_red_hit_accty">请输入您的账号</string>
    <string name="new_red_hit_tips"> *12位字符，由字母a-z与数字1-5组成</string>
    <string name="new_red_txt_publec">公钥</string>
    <string name="new_red_txt_key">私钥</string>
    <string name="new_red_txt_generate">生产新公钥</string>
    <string name="new_red_hit_public">生产新公钥</string>
    <string name="new_red_txt_identical">owner key 和 active key相同</string>
    <string name="new_red_hit_owkey">请输入私钥</string>
    <string name="new_red_hit_disclose">*不要透露给任何人</string>
    <string name="new_red_txt_red_strand">红包串(选填)</string>
    <string name="new_red_hit_imput_setand">请输入红包串</string>
    <string name="new_red_txt_offline">离线保存</string>
    <string name="new_red_txt_proposal">建议抄写或打印私钥后放置在安全地点保存</string>
    <string name="new_red_txt_transmission">请勿通过网络工具传输私钥，例如用微信发送到电脑。一旦被黑客获取造成不可挽回的资产损失</string>
    <string name="new_red_txt_tnetwork">请勿使用网络传输</string>
    <string name="new_red_txt_cjtips">创建提示</string>
    <string name="new_red_txt_eos">创建账号会扣除部分BOS,剩余部分会转入账号内</string>
    <string name="cloud_list_title">账户列表</string>
    <string name="cloud_list_tips">批量导入（同一密码加密账户可多选批量导入）</string>
    <string name="answer_repeat">问题答案不能重复</string>
    <string name="answer_empty" formatted="false">答案不能为空</string>
    <string name="answer_length_error">答案长度必须在2-16位</string>
    <string name="cloud_management_title">云端管理</string>
    <string name="cloud_management_cancel">取消</string>
    <string name="cloud_management_batch">同密码keystore可多选批量导入</string>
    <string name="cloud_management_delete">删除</string>
    <string name="cloud_management_imports">导入</string>
    <string name="cloud_management_edit">编辑</string>
    <string name="dialog_btn_txt_pwd">确认密码</string>
    <string name="home_your_account_housekeeper">你&#160;的&#160;账&#160;户&#160;管&#160;家</string>
    <string name="get_account_error">获取账户信息失败</string>
    <string name="import_error">导入失败</string>
    <string name="invalid_private">无效私钥</string>
    <string name="weak_str">弱</string>
    <string name="medium_str">中</string>
    <string name="strong_str">强</string>
    <string name="question_error_str">安全问题错误，请检查</string>
    <string name="change_pwd_start">修改密码中</string>
    <string name="change_pwd_success">修改密码成功</string>
    <string name="old_password_same">不能与原密码相同</string>
    <string name="password_error">密保错误，解密失败</string>
    <string name="wallet_txt_err_name">获取账号失败</string>
    <string name="err_txt_key_format">密码不正确或KeyStore格式错误</string>
    <string name="dialog_pwd_err_txt">输入密码错误</string>
    <string name="dialog_key_ktore_err_txt">获取KeyStore失败</string>
    <string name="dialog_key_ktore_err_txt_priavte">获取私钥失败</string>
    <string name="update_power_txt_ago">当前</string>
    <string name="new_red_envelopes_cope">复制成功</string>
    <string name="new_red_envelopes_err_account">账户名不能为空</string>
    <string name="new_red_envelopes_err_key">公私钥不能为空</string>
    <string name="new_red_envelopes_err_envelope">请填写创建账号的红包串</string>
    <string name="eos_red_envelope">BOS红包</string>
    <string name="eos_red_my_red">我塞的红包</string>
    <string name="red_ordinary_red">普通红包</string>
    <string name="red_amount">红包总金额</string>
    <string name="red_envelope_amount_input_hint">最少0.1</string>
    <string name="red_envelope_num">红包个数</string>
    <string name="num">个</string>
    <string name="red_envelope_num_input_hint">最多100</string>
    <string name="red_congratulations">恭喜发财，大吉大利</string>
    <string name="red_transfer_hint">*红包金额以实际转账为准</string>
    <string name="money_into_red_envelope">塞钱进红包</string>
    <string name="refund_instructions">未领取的红包，将于转账成功24小时后发起退款</string>
    <string name="ping">拼</string>
    <string name="new_red_envelopes_err_presence">账号已存在</string>
    <string name="synchronization">同步</string>
    <string name="update_pwer_err_txt_owner">暂无权限修改,请导入owner权限</string>
    <string name="red_encelpe_record_title">红包记录</string>
    <string name="red_encelpe_record_txt_receive">领取记录</string>
    <string name="red_encelpe_record_txt_send">发送记录</string>
    <string name="dialog_receive_btn_txt">领取红包</string>
    <string name="red_succees_title">红包</string>
    <string name="red_succees_tips">保存到您的BOS账号</string>
    <string name="update_poer_txt_success">修改权限成功!</string>
    <string name="update_poer_txt_err">修改权限成功,重新导入失败,请用户重新导入新的私钥</string>
    <string name="red_add_success_red_strand">红包串</string>
    <string name="red_record_add">创建</string>
    <string name="item_account_btn_impunt">检测并导入</string>
    <string name="new_red_envelopes_txt_success">创建账号成功,正在导入</string>
    <string name="new_red_envelopes_err_acctont_leng">账号名不能为空并且等于12位长度</string>
    <string name="new_red_envelopes_txt_imotu">导入账号成功</string>
    <string name="new_red_envelopes_txt_manual">导入账号失败,请手动导入</string>
    <string name="new_red_envelopes_txt_retry">导入账号失败,请稍后再试</string>
    <string name="new_red_envelopes_txt_history">历史账户</string>
    <string name="red_record_err_lose">获取历史账户失败</string>
    <string name="pay_account">支付账户</string>
    <string name="choose_pay_account">请选择支付账户</string>
    <string name="random_envelope">随机红包</string>
    <string name="account_envelope">账号红包</string>
    <string name="red_envelope">红包</string>
    <string name="input_red_packet_receive">请输入红包串领取红包</string>
    <string name="send_red_envelope">发红包</string>
    <string name="create_bos_account">创建BOS账号</string>
    <string name="red_envelope_receive">紅包</string>
    <string name="accounts_receivable">收款账户</string>
    <string name="copy">复制</string>
    <string name="transfer_amount">转账金额</string>
    <string name="input_receipt_account">请输入收款账户</string>
    <string name="remarks">备注</string>
    <string name="input_remark">请输入备注</string>
    <string name="transfer_prompt">转账提示</string>
    <string name="transfer_prompt_str">转账时须加上备注，同时确认收款地址</string>
    <string name="tansfer">转账</string>
    <string name="dialog_tips_title">提示</string>
    <string name="dialog_tips_delete">确认是否删除</string>
    <string name="account_list_delete_txt">删除账号失败请重试</string>
    <string name="account_list_delete_sessu">删除账号成功</string>
    <string name="new_red_envelopes_err_txt_de">添加本地记录失败请重试</string>
    <string name="congratulations">恭喜发财，大吉大利</string>
    <string name="choose_account">选择账号</string>
    <string name="create_success">创建成功</string>
    <string name="creating_red_envelope">正在创建红包</string>
    <string name="input_active_permission">请导入该账号的active权限</string>
    <string name="create_red_envelope_fail">创建红包失败</string>
    <string name="import_txt_tips_pwd">请输入密码</string>
</resources>