<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewRedEnvelopesActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimaryDark"
        app:contentInsetStart="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:background="@color/new_red_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatTextView
                style="@style/tool_bar_title_style"
                android:text="@string/home_create_account" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingEnd="15dp"
                android:paddingRight="15dp"
                android:scaleType="center"
                android:src="@drawable/me_icon_return_default"
                android:tag="info:alpha" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/new_red_have"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingEnd="15dp"
                android:paddingRight="15dp"
                android:text="@string/new_red_envelopes_txt_history"
                android:textColor="#FFFFFFFF"
                android:textSize="14sp" />
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorWhite"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <LinearLayout
                android:id="@+id/authority_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/secret_txt_one"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_account"
                            android:textColor="@color/personal_txt_black"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:id="@+id/new_red_copy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <android.support.v7.widget.AppCompatImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                app:srcCompat="@drawable/bos_icon_fuzhi_default" />

                            <android.support.v7.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="2dp"
                                android:text="@string/export_txt_copy"
                                android:textColor="@color/security_coloc_change"
                                android:textSize="12sp" />


                        </LinearLayout>
                    </RelativeLayout>

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/new_red_edit_account"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:maxLength="12"
                        android:background="@drawable/pwd_edit_background"
                        android:digits="12345qwertyuiopasdfghjklzxcvbnm."
                        android:gravity="center_vertical"
                        android:hint="@string/new_red_hit_accty"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:singleLine="true"
                        android:textColor="@color/color_333"
                        android:textSize="20sp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_red_hit_tips"
                        android:textColor="@color/authority_setting_txt_red"
                        android:textSize="12sp" />

                </LinearLayout>
                <!---->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new_red_txt_publec"
                            android:textColor="@color/found_coloc_check"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:id="@+id/update_power_linear_click_renovate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <android.support.v7.widget.AppCompatImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                app:srcCompat="@drawable/bos_icon_shengcheng_default" />

                            <android.support.v7.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="2dp"

                                android:text="@string/new_red_txt_generate"
                                android:textColor="@color/security_coloc_change"
                                android:textSize="12sp" />

                        </LinearLayout>
                    </RelativeLayout>

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/update_power_txt_public"
                        android:layout_width="match_parent"
                        android:layout_height="76dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/pwd_edit_background"
                        android:gravity="top"
                        android:hint="@string/new_red_hit_public"
                        android:padding="10dp"
                        android:textColor="@color/personal_txt_black"
                        android:textSize="14sp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/new_red_txt_identical"
                        android:textColor="@color/new_red_txt_tipe"
                        android:textSize="12sp" />
                </LinearLayout>
                <!---->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new_red_txt_key"
                            android:textColor="@color/found_coloc_check"
                            android:textSize="14sp" />


                    </RelativeLayout>

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/update_power_txt_key"
                        android:layout_width="match_parent"
                        android:layout_height="76dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/pwd_edit_background"
                        android:clickable="false"
                        android:focusable="false"
                        android:gravity="top"
                        android:hint="@string/new_red_hit_owkey"
                        android:padding="10dp"
                        android:textColor="@color/personal_txt_black"
                        android:textSize="14sp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/new_red_hit_disclose"
                        android:textColor="@color/authority_setting_txt_red"
                        android:textSize="12sp" />
                </LinearLayout>
                <!---->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new_red_txt_red_strand"
                            android:textColor="@color/found_coloc_check"
                            android:textSize="14sp" />


                    </RelativeLayout>

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/update_power_txt_strand"
                        android:layout_width="match_parent"
                        android:layout_height="76dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/pwd_edit_background"
                        android:gravity="top"
                        android:hint="@string/new_red_hit_imput_setand"
                        android:padding="10dp"
                        android:textColor="@color/personal_txt_black"
                        android:textSize="14sp" />

                </LinearLayout>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:visibility="gone"
                    android:text="@string/new_red_txt_offline"
                    android:textColor="@color/authority_setting_txt_red"
                    android:textSize="13sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="5dp"
                    android:text="@string/new_red_txt_proposal"
                    android:textColor="@color/new_red_txt_content"
                    android:textSize="12sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:visibility="gone"
                    android:text="@string/new_red_txt_tnetwork"
                    android:textColor="@color/authority_setting_txt_red"
                    android:textSize="13sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="5dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/new_red_txt_transmission"
                    android:textColor="@color/new_red_txt_content"
                    android:textSize="12sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/new_red_txt_cjtips"
                    android:textColor="@color/authority_setting_txt_red"
                    android:textSize="13sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/new_red_txt_eos"
                    android:textColor="@color/new_red_txt_content"
                    android:textSize="12sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/new_red_btn"
                    android:layout_width="match_parent"
                    android:layout_height="42.5dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="75dp"
                    android:background="@drawable/new_red_btn_drawable"
                    android:gravity="center"
                    android:text="@string/home_create_account"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />
            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</android.support.constraint.ConstraintLayout>