<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ImportKeyStoreFragment">
    <RelativeLayout
        android:paddingTop="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        >
        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="157dp"
            android:background="@drawable/edit_import_stype"
            android:layout_marginTop="15dp"
            android:id="@+id/import_edit_key"
            android:hint="@string/import_edit_key"
            android:gravity="top"
            android:padding="15dp"
            android:textSize="16sp"
            android:textColorHint="@color/import_edit_hint_color"
            android:textColor="@color/import_edit_hint_color"
            />


        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_below="@+id/import_edit_key"
            android:background="@drawable/edit_import_stype"
            android:layout_marginTop="15dp"
            android:id="@+id/import_edit_pwd"
            android:hint="@string/import_txt_tips_pwd"
            android:gravity="top"
            android:padding="15dp"
            android:password="true"
            android:textSize="16sp"
            android:textColorHint="@color/import_edit_hint_color"
            android:textColor="@color/import_edit_hint_color"
            tools:ignore="Deprecated" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/import_store_account"
            android:layout_width="match_parent"
            android:layout_height="42.5dp"

            android:layout_marginTop="105dp"
            android:layout_below="@+id/import_edit_key"
            android:background="@drawable/pwd_btn_drawable"
            android:gravity="center"
            android:text="@string/import_title"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/import_stort_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/import_store_account"
            android:text="@string/import_txt_help"
            android:visibility="gone"
            android:textColor="@color/import_txt_help"
            android:layout_marginTop="15dp"
            android:textSize="12sp"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>